infra/k8s/events-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
        - name: eventss
          #image: powiedl/blog-posts:0.0.2
          image: powiedl/blog-events
---
apiVersion: v1
kind: Service
metadata:
  name: events-srv
spec:
  type: ClusterIP # das ist der Standardwert, d. h. man kann es auch weglassen (aber wir schreiben es, damit man es klarer erkennt)
  selector:
    app: events
  ports:
    - name: events
      protocol: TCP
      port: 4005
      targetPort: 4005
