infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # auf diesen Port hoert der Service (also der NodePort)
      targetPort: 4000 # auf diesen Port "hoert" die Anwendung (im Pod)
